Data analysis / Improve mapping to index record object.